<resources>
    <string name="app_name">W4_P4</string>
    <string name="choose_letter">Choose a letter:</string>
    <string name="new_game">New Game</string>
    <string name="hint">Hint</string>

    <string name="orange_hint_1">It is a color</string>
    <string name="orange_hint_2">It is also a fruit</string>
    <string name="orange_hint_3">The result of crossing red with yellow</string>

    <string name="oak_hint_1">A type of tree</string>
    <string name="oak_hint_2">Commonly used to make furniture</string>
    <string name="oak_hint_3">White ___ tree</string>

    <string name="boston_hint_3">Home of this university</string>
    <string name="boston_hint_1">Its residents are known for their accent</string>
    <string name="boston_hint_2">A bustling city full of universities</string>

    <string name="lion_hint_1">A fierce animal</string>
    <string name="lion_hint_2">King of the jungle</string>
    <string name="lion_hint_3">The protagonist of a famous Disney movie is this animal</string>

    <string name="baseball_hint_1">A popular sport</string>
    <string name="baseball_hint_3">\"America\'s Pastime\"</string>
    <string name="baseball_hint_2">Played between two teams of nine</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>


</resources>