<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/new_game" />

<!--    <ImageView-->
<!--        android:id="@+id/hangman_stand"-->
<!--        android:layout_width="444dp"-->
<!--        android:layout_height="341dp"-->
<!--        app:srcCompat="@drawable/hangman_stand" />-->

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip">

        <ImageView
            android:id="@+id/hangman_stand"
            android:layout_width="wrap_content"
            android:layout_height="433dp"
            android:orientation="vertical"
            android:src="@drawable/hangman_stand" />
        <ImageView
            android:id="@+id/hangman_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:layout_marginLeft="75dp"
            android:src="@drawable/hangman_head"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/hangman_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="158dp"
            android:layout_marginLeft="95dp"
            android:src="@drawable/hangman_body"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/hangman_right_arm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginLeft="99dp"
            android:src="@drawable/hangman_right_arm"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/hangman_left_arm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginLeft="57dp"
            android:src="@drawable/hangman_left_arm"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/hangman_right_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:layout_marginLeft="97dp"
            android:src="@drawable/hangman_right_leg"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/hangman_left_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="225dp"
            android:src="@drawable/hangman_left_leg"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/word_spaces_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/word_spaces_filler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/choose_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_letter"
        android:textAlignment="center"
        android:textSize="24sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/letters_to_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/a" />

            <Button
                android:id="@+id/b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/b" />

            <Button
                android:id="@+id/c_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/c" />

            <Button
                android:id="@+id/d_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/d" />

            <Button
                android:id="@+id/e_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/e" />

            <Button
                android:id="@+id/f_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/f" />

            <Button
                android:id="@+id/g_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/g" />

            <Button
                android:id="@+id/h_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/h" />

            <Button
                android:id="@+id/i_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/i" />

            <Button
                android:id="@+id/j_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/j" />

            <Button
                android:id="@+id/k_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/k" />

            <Button
                android:id="@+id/l_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/l" />

            <Button
                android:id="@+id/m_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/m" />

            <Button
                android:id="@+id/n_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/n" />

            <Button
                android:id="@+id/o_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/o" />

            <Button
                android:id="@+id/p_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/p" />

            <Button
                android:id="@+id/q_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/q" />

            <Button
                android:id="@+id/r_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/r" />

            <Button
                android:id="@+id/s_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/s" />

            <Button
                android:id="@+id/t_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/t" />

            <Button
                android:id="@+id/u_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/u" />

            <Button
                android:id="@+id/v_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/v" />

            <Button
                android:id="@+id/w_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/w" />

            <Button
                android:id="@+id/x_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/x" />

            <Button
                android:id="@+id/y_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/y" />

            <Button
                android:id="@+id/z_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/z" />

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hint" />

</LinearLayout>